--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
   "type": "module",
   "scripts": {
     "build": "npx tsc --build",
+    "watch": "npx tsc --watch",
+    "lint:check" : "npx eslint .",
+    "lint:fix" : "npx eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Warps,Inc.",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
+    "@stylistic/eslint-plugin": "^2.12.0",
     "@types/node": "^22.7.5",
-    "typescript": "^5.6.3"
+    "eslint": "^9.16.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.18.0"
   },
   "dependencies": {
     "@bufbuild/protobuf": "^2.2.2",
