--- a/.npmignore
+++ b/.npmignore
@@ -1,11 +1,22 @@
+# development
 .git
 .gitignore
 .npmignore
 eslint.config.mjs
 tsconfig.json
 node_modules/
-src/
 tsconfig.json
+
+# src
+/src/
+!dist/src/
+
+# proto 
+/proto/
+!dist/proto/
+
+# local
 *.log
+
 # Mac
 **/.DS_Store
