--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "dist/src/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "npx tsc --build",
-    "watch": "npx tsc --watch",
+    "build": "npx tsc --build && npx tsc-alias",
+    "watch": "npx tsc && (concurrently \"tsc -w\" \"tsc-alias -w\")",
     "lint:check": "npx eslint .",
     "lint:fix": "npx eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
